unify 8 an 11 launchers