@@ -38,7 +38,6 @@ if "x" == "x%1" (
         -XX:+TieredCompilation ^
         -XX:TieredStopAtLevel=1 ^
         -cp "%RHINO_HOME%"/* ^
-        --add-exports jdk.jlink/jdk.tools.jmod=ALL-UNNAMED ^
         org.mozilla.javascript.tools.shell.Main ^
         -O -1 ^
         "%ST_APP_DIR%"/init/runTask.js ^
